--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="profile-body">
         <div class="left">
           <h2>About Me</h2>
-          <p>I’m a passionate frontend developer in the making with strong foundations in C, C++, Python, SQL, and data structures. I enjoy transforming ideas into responsive and user-friendly web applications using HTML, CSS, JavaScript, and React.My projects, including a Movie Recommendation Website, Habit Tracker with Streak Calendar, and Student DBMS, reflect my ability to build practical and impactful solutions.’m continuously learning, adaptable, and eager to grow into a versatile software engineer who contributes to innovative teams and meaningful projects.</p>
+          <p>I’m a passionate frontend developer in the making with strong foundations in C, C++, Python, SQL, and data structures. I enjoy transforming ideas into responsive and user-friendly web applications using HTML, CSS, JavaScript, and React. My projects, including a Movie Recommendation Website, Habit Tracker with Streak Calendar, and Student DBMS, reflect my ability to build practical and impactful solutions.I’m continuously learning, adaptable, and eager to grow into a versatile software engineer who contributes to innovative teams and meaningful projects.</p>
 
           <h2>Education</h2>
           <p><strong>B.Tech IT</strong> – Poornima College of Engineering (2022–2026)</p>
